<resources>
    <string name="app_name">乐天堂娱乐</string>
    <string name="app_id">输入您讯飞的appid</string>
    <string name="folder_all">All Images</string>
    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">图片不能超过%1$s张</string>
    <string name="default_tradecity_name">宜宾</string>
    <string name="tips_server_exception_str">网络异常，请重试</string>
    <string name="tips_exit_str">再次点击退出程序</string>
    <string name="title_login">登录</string>
    <string name="tips_unsign_text">未登录</string>
    <string name="title_register">注册</string>
    <string name="title_forget">找回密码</string>
    <string name="title_binding">绑定手机号</string>
    <string name="title_set_binding">设置绑定手机</string>
    <string name="title_my_binding">修改绑定手机</string>
    <string name="title_set_password">修改登录密码</string>
    <string name="title_set_pay_password">设置支付密码</string>
    <string name="title_reset_pay_password">重置支付密码</string>
    <string name="title_login_btn_str">立即登录</string>
    <string name="title_register_btn_str">立即注册</string>
    <string name="title_verify_password">身份验证</string>
    <string name="title_setting_str">设置</string>
    <string name="title_sure_str">确定</string>
    <string name="title_sure_str2">确 认</string>
    <string name="tips_cancel_str">取消</string>
    <string name="tips_ok_str">确定</string>
    <string name="tips_update">版本更新</string>
    <string name="hint_account_text">请输入手机号</string>
    <string name="hint_password_text">请输入密码</string>
    <string name="tips_commit_message">提交中...</string>
    <string name="tips_loading_message">加载中...</string>
    <string name="title_empty_name">未设置</string>
    <string name="tips_version_message">暂无版本可更新</string>
    <string name="tips_mobile_exists">该手机号已注册，请重新输入</string>
    <string name="tips_mobile_binding">该手机号已被绑定，请重新输入</string>
    <string name="tips_mobile_unexists">此手机号还未注册</string>
    <string name="title_remember_password">记住密码</string>
    <string name="title_forget_password">忘记密码？</string>
    <string name="tips_empty_account_text">账号不能为空</string>
    <string name="tips_empty_password_text">密码不能为空</string>
    <string name="hint_telephone_text">请输入手机号</string>
    <string name="hint_valid_telephone_text">请输入正确的手机号</string>
    <string name="hint_valid_telephone_textisnull">手机号码不能为空</string>
    <string name="hint_telephone_code_text">请输入手机验证码</string>
    <string name="hint_update_password_text">请输入新密码（至少6位）</string>
    <string name="hint_repeat_password_text">请再次输入密码</string>
    <string name="hint_alipay_password_text">请输入支付密码（6位数字）</string>
    <string name="tips_password_length_text">密码长度不足6个字符，请重新输入</string>
    <string name="tips_password_different_text">两次密码输入的不一致，请重新输入</string>
    <string name="tips_update_password_txt">修改密码成功，请重新登录</string>
    <string name="tips_wrong_valid_telephone_text">手机验证码不正确</string>
    <string name="hint_invite_code_text">请输入邀请码（不为必填）</string>
    <string name="hint_protocol_text">请同意注册协议</string>
    <string name="title_telephone_code">获取验证码</string>
    <string name="time_format">倒计时%1$sS</string>
    <string name="default_version_str">(最新版本%1$s)</string>
    <string name="local_version_str">V%1$s</string>
    <string name="tips_version_str">更新失败</string>
    <string name="title_register_protocol">同意注册协议</string>
    <string name="title_agree_bank_card_protocol">同意银行卡协议</string>
    <string name="title_protocol">《用户注册协议》</string>
    <string name="title_bank_card_protocol">《提现协议》</string>
    <string name="default_member_level">V1会员</string>
    <string name="setting_user_manager_str">用户管理</string>
    <string name="setting_user_data_str">个人资料</string>
    <string name="setting_user_address_str">收货地址管理</string>
    <string name="setting_app_setting_str">应用设置</string>
    <string name="setting_cach_str">清除缓存</string>
    <string name="setting_clear_cach_str">一键清除</string>
    <string name="setting_vertion_str">软件更新</string>
    <string name="setting_about_str">关于我们</string>
    <string name="setting_message_notification_str">消息推送设置</string>
    <string name="setting_wifi_download_str">非WiFi情况下图片下载</string>
    <string name="setting_logout_str">退出系统</string>
    <string name="tips_empty_nickname">昵称不能为空</string>
    <string name="tips_empty_emailname">邮箱不能为空</string>
    <string name="tips_empty_email">请输入正确的邮箱！</string>
    <string name="title_collection_text">我的收藏</string>
    <string name="title_zhongchou_text">我的众筹</string>
    <string name="title_business_text">我的团购</string>
    <string name="title_invite_code_text">邀请码</string>
    <string name="title_business_apply_text">我的报名</string>
    <string name="title_scan_notes_text">浏览记录</string>
    <string name="title_shop_manager_text">商家管理</string>
    <string name="title_wallet_text">钱包</string>
    <string name="title_hongbao_text">红包</string>
    <string name="title_vip_card_text">会员卡</string>
    <string name="title_integral_text">积分</string>
    <string name="title_coupon_text">优惠券</string>
    <string name="title_assets_text">我的资产</string>
    <string name="title_aftermarket_text">售后/退款</string>
    <string name="title_aftermarket_progress_text">进度查询</string>
    <string name="title_assess_text">待评价</string>
    <string name="title_receipt_text">待收货</string>
    <string name="title_shipping_text">待发货</string>
    <string name="title_pay_text">待付款</string>
    <string name="title_all_order_text">查看全部订单</string>
    <string name="title_my_order_text">我的订单</string>
    <string name="title_my_data">个人资料</string>
    <string name="title_data_avatar_text">个人头像</string>
    <string name="title_data_nickname_text">昵称</string>
    <string name="title_data_phone_text">绑定手机号码</string>
    <string name="title_data_gender_text">性别</string>
    <string name="title_data_birthday_text">生日</string>
    <string name="title_data_email_text">邮箱</string>
    <string name="title_data_password_text">修改登录密码</string>
    <string name="title_data_pay_password_text">支付密码</string>
    <string name="tips_data_pay_password_text">（用于提现钱包余额）</string>
    <string name="tips_empy_pay_password_text">请输入支付密码</string>
    <string name="tips_set_pay_password_text">设置支付密码成功</string>
    <string name="title_logistics_text">物流通知</string>
    <string name="title_product_text">商品提醒</string>
    <string name="title_system_text">系统通知</string>
    <string name="tips_default_nickname_text">4-10个字符，可用英文、数字、符号组成</string>
    <string name="default_title_city_text">城市选择</string>
    <string name="title_city_text">当前城市：%1$s</string>
    <string name="title_city_location_text">定位城市</string>
    <string name="title_city_failure_location_text">定位失败</string>
    <string name="title_city_relocation_text">请重新定位</string>
    <string name="tips_location_faifure">定位失败，请重新定位</string>
    <string name="third_login_label">第三方登录</string>
    <string name="qq_label">QQ</string>
    <string name="weichat_lable">微信</string>
    <string name="sinna_lable">微博</string>
    <string name="my_binding_lable">您正在修改账户绑定的手机，请进行身份验证</string>
    <string name="my_binding_remember_label">原手机号能接收验证码</string>
    <string name="my_binding_forget_lable">原手机号不能接收验证码</string>
    <string name="my_password_label">您正在重置钱包提现时的支付密码</string>
    <string name="my_password_remember_label">我记得原支付密码</string>
    <string name="my_password_forget_label">忘记了原支付密码</string>
    <string name="verify_password_label">请输入支付密码，完成身份验证</string>
    <string name="repeat_reset_pay_password_label">请再次输入支付密码</string>
    <string name="reset_pay_password_label">请输入新的支付密码（6位数字）</string>
    <string name="set_password_label">请输入支付密码（6位数字）</string>
    <string name="reset_password_label">请输入新密码（至少6位）</string>
    <string name="repeat_reset_password_label">请再次输入密码</string>
    <string name="tips_reset_pay_password_success">支付密码重置成功</string>
    <string name="tips_reset_password_success">修改密码成功，请重新登录</string>
    <string name="gender_label">性别：</string>
    <string name="male_label">男</string>
    <string name="female_label">女</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">放开以刷新</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_down_hint_ready">放开以加载</string>
    <string name="release_load">上拉加载</string>
    <string name="release_loading">正在刷新</string>
    <string name="release_down_loading">正在加载</string>
    <string name="my_invite_label">我的邀请码</string>
    <string name="share_title_tv">分享到</string>
    <string name="share_sub_title">分享成功后即刻获得%1$s积分</string>
    <string name="share_qq_label">QQ好友</string>
    <string name="share_weichat_label">朋友圈</string>
    <string name="share_weichat_friend_label">微信好友</string>
    <string name="share_sina_label">微博</string>
    <string name="share_qq_zone_label">QQ空间</string>
    <string name="tips_empty_invite_text">请输入正确的邀请码</string>
    <string name="set_invite_code_success_label">恭喜您获得%1$s积分！</string>
    <string name="label_comment_text">%1$s条评价</string>
    <string name="label_price_text">￥%1$s</string>
    <string name="label_rank_text">V%1$s</string>
    <string name="label_sales_text">已销%1$s件</string>
    <string name="label_sales_label">已销%1$s件</string>
    <string name="label_stock_text">库存仅剩%1$s件</string>
    <string name="label_product_stock_text">库存 %1$s</string>
    <string name="label_product_sales_text">销量 %1$s</string>
    <string name="label_comment_count_text">评价（ %1$s条 ）</string>
    <string name="label_product_collection_text">%1$s 人收藏</string>
    <string name="label_comment_all_text">全部（ %1$s ）</string>
    <string name="label_comment_picture_text">晒图（ %1$s ）</string>
    <string name="label_product_scan_text">%1$s人收藏</string>
    <string name="label_product_scan_label">收藏量：%1$s</string>
    <string name="title_scan_text">扫一扫</string>
    <string name="tips_barcode_text">将条形码放入框内，即可自动扫描</string>
    <string name="title_my_collection">我的收藏</string>
    <string name="title_my_scan_list">浏览记录</string>
    <string name="tips_merchant_scan">%1$s人关注</string>
    <string name="tips_merchant_scan_label">浏览量：%1$s</string>
    <string name="tips_merchant_scan_text">人气%1$s</string>
    <string name="tips_point">%1$s积分</string>
    <string name="tips_merchant_address">地址：%1$s</string>
    <string name="tips_merchant_phone">联系方式：%1$s</string>
    <string name="label_color_text">颜色</string>
    <string name="label_size_text">尺寸</string>
    <string name="label_count_text">购买数量</string>
    <string name="tips_mobile_binding_text">该手机号已被绑定，请重新输入</string>
    <string name="tips_search_text">请输入搜索关键字</string>
    <string name="tips_binding_modile_success">修改绑定手机号成功</string>
    <string name="tips_empty_text">暂无记录</string>
    <string name="tips_empty_text1">您的购物车没有商品哦</string>
    <string name="tips_empty_text2">红包记录为空</string>
    <string name="hint_search_box">请输入城市名</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="cart_title_text">购物车</string>
    <string name="cart_edit_text">编辑</string>
    <string name="cart_ok_text">完成</string>
    <string name="cart_pay_text">结算</string>
    <string name="cart_delete_text">删除所选</string>
    <string name="cart_cimmit_text">已选(%1$s)</string>
    <string name="cart_stock_label">剩余%1$s件</string>
    <string name="cart_delete_tips">确认要删除这%1$s种商品吗？</string>
    <string name="title_order_edit">确认订单</string>
    <string name="title_my_order">我的订单</string>
    <string name="title_order_detail">订单详情</string>
    <string name="title_order_refund">申请退款</string>
    <string name="cart_add_success_tips">加入购物车成功</string>
    <string name="label_cart_total_count">共%1$s件商品</string>
    <string name="label_cart_receiver_name">收货人：%1$s</string>
    <string name="label_cart_receiver_address">收货地址：%1$s</string>
    <string name="label_cart_providder_address">地址：%1$s</string>
    <string name="label_cart_providder_mobile">联系电话：%1$s</string>
    <string name="merchant_title">店铺详情</string>
</resources>