<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <include layout="@layout/header_layout_text" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/split_line_color" />
    <ScrollView
        android:id="@+id/login_scrollview_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="124dp">
        <ImageView
            android:layout_width="89dp"
            android:layout_height="89dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:text="账号"
            />
        <EditText
            android:id="@+id/login_account_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_marginLeft="15dp"
            android:hint="@string/hint_account_text"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_gray"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="1px"
        android:background="@color/split_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:text="密码"
            />
        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:hint="@string/hint_password_text"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="20"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/color_gray"
            android:textColorHint="@color/color_gray"
            android:textSize="16sp" />
        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/split_line_color" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/forget_tv"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"
                android:text="@string/title_forget_password"
                android:textColor="@color/color_gray"
                android:textSize="13sp" />
        </RelativeLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/selector_login_news"
        android:gravity="center"
        android:text="@string/title_login_btn_str"
        android:enabled="true"
        android:state_pressed="false"
        android:textColor="@color/color_white"
        android:textSize="17sp"
        style="?android:attr/borderlessButtonStyle"
        />
            <TextView
                android:id="@+id/regist_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:layout_alignParentLeft="true"
                android:text="还没有帐号？快速注册"
                android:textColor="@color/color_black"
                android:textSize="13sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
